force-app/main/default/objects/JIRA_Credentials__c/JIRA_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>JIRA Credentials</label>
</CustomObject>