force-app/main/default/objects/JIRA_Credentials__c/fields/JIRA_CRMToken__c.field-meta.xml
<CustomField>
    <fullName>JIRA_CRMToken__c</fullName>
    <label>JIRA_CRMToken</label>
    <length>12</length>
    <type>Text</type>
</CustomField>