force-app/main/default/objects/JIRA_Credentials__c/fields/JIRA_Hostname__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Hostname__c</fullName>
    <label>JIRA Hostname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>