force-app/main/default/objects/JIRA_Credentials__c/fields/JIRA_Password__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Password__c</fullName>
    <label>JIRA Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>