force-app/main/default/objects/JIRA_Credentials__c/fields/JIRA_Username__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Username__c</fullName>
    <label>JIRA Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>